CSS/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  overflow-x: hidden;
}

body {
  font-family: cursive;
  background-color: rgb(229 231 235);
  position: relative;
  min-height: 100vh;
}

main {
  padding: 10px;
  padding-bottom: 2.5rem;
}

a {
  text-decoration: none;
}

.menu li {
  list-style: none;
}

.logo {
  font-size: 20px;
}

.navBar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 20px;
  background-color: rgb(31 41 55);
  color: #fff;
}

.nav-links a {
  color: #fff;
}

.menu {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 1em;
  font-size: 18px;
}

.menu a:hover {
  color: black;
  border-radius: 5px;
  transition: 0.3s ease;
}

.menu li {
  padding: 5px 14px;
}

input[type="checkbox"] {
  display: none;
}

.hamburger {
  display: none;
  font-size: 24px;
  user-select: none;
}

@media (max-width: 768px) {
  .menu {
    display: none;
    position: absolute;
    background-color: rgb(31 41 55);
    right: 0;
    left: 0;
    text-align: center;
    padding: 16px 0;
  }
  .menu li:hover {
    display: inline-block;
    color: black;
    transition: 0.3 ease;
  }

  input[type="checkbox"]:checked ~ .menu {
    display: block;
  }

  .hamburger {
    display: block;
  }
}

.picture {
  float: right;
  width: 40%;
  left: 1000px;
  font-size: 10px;
}

article {
  padding: 10px;
}

figcaption {
  white-space: pre;
}

#pageFooter {
  position: absolute;
  width: 100%;
  bottom: 0;
  height: 2.5rem;
  justify-content: space-between;
}

#professionalExperience li {
  margin-left: 20px;
}

.projects li {
  margin-left: 20px;
}
.projects a {
  display: block;
  width: max-content;
}

